# AppSec-Cheat-Codes

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/: Dockerfile  main.py  requirements.txt
backend/tests/: driver.py  ssrf_lfi_test_urls_vulnerable.json  ssrf_webhook_test_urls_patched.json  ssrf_webhook_test_urls_vulnerable.json
exploits/: cli.py
frontend/: Dockerfile  package-lock.json  package.json  wrangler.toml
frontend/src/: App.vue  constants.ts
frontend/src/views/: ChallengeView.vue
frontend/src/views/sqli/: SQLiLoginBypassChallenge.vue  SQLiLoginBypassSolution.vue  SQLiSecondOrderChallenge.vue  SQLiSecondOrderSolution.vue
frontend/src/views/ssrf/: SSRFLocalFileChallenge.vue  SSRFLocalFileSolution.vue  SSRFWebhookChallenge.vue  SSRFWebhookSolution.vue
internal_api/: Dockerfile
terraform/: shared_versions.tf
terraform/aws/: main.tf  variables.tf
terraform/cloudflare/: .terraform.lock.hcl  main.tf  variables.tf
terraform/iam/: .terraform.lock.hcl  main.tf
terraform/modules/cloudtrail/: main.tf
terraform/modules/ecs/: main.tf
terraform/state/: .terraform.lock.hcl  main.tf  outputs.tf
